sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:9: error: illegal start of simple pattern
    for(var i <- 0 to nbValue-1-i) {
        ^AlgBubbleSort2:16: error: '<-' expected but '}' found.
  }
  ^